Issue #23466: Raised OverflowError if %c argument is out of range.